2006-07-18  Jörgen Scheibengruber <mfcn@gmx.de>

	* configure.in:	0.13 -> 0.13.99
	* netspeed.c: (bytes_to_string): use gettext(), so that N_-strings get
	translated properly

2006-07-11  Jörgen Scheibengruber <mfcn@gmx.de>

	* netspeed.c: (bytes_to_string): apply patch from Benoit; use 1000 bit = 1Mbit
	1024 bytes = 1 MiByte; switch to SI-Units
	* netspeed.c: (update_applet), (settings_cb): show transferred bits in
	the details dialog instead of bytes, if this setting is active 
	* netspeed.c: (about_cb): fix translator-credits

2006-06-17  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* docs/es/netspeed_applet.xml: correct a couple of details on
	the Spanish documentation.

2006-05-31  Jörgen Scheibengruber <mfcn@gmx.de>

	* configure.in: Added pl to ALL_LINGUAS

2006-04-25  Jörgen Scheibengruber <mfcn@gmx.de>

	* backend.c: (get_device_info): use only 6 octets for hw-address,
	if the last two are 0

2006-04-25  Jörgen Scheibengruber <mfcn@gmx.de>

	* backend.(c|h): add is_no_dummy_device() and make use of it
	* netspeed.c: make use of is_no_dummy_device() instead of checking devices
	manually

2006-02-07  Raphael Higino  <raphaelh@cvs.gnome.org>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2005-10-08  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* src/netspeed.c (update_applet): correct the text in the tooltip.

2005-07-26  Jörgen Scheibengruber <mfcn@gmx.de>

	* Makefile.am: add distuninstallcheck_listfiles (See 
	http://mail.gnome.org/archives/gnome-doc-list/2003-May/msg00008.html).
	Hopefully that makes make distcheck work;
	remove omf.make xmldocs.make; add CLEANFILES DISTCLEANFILES
	* pixmaps/Makefile.am: add icons_DATA to EXTRA_DIST
	* docs/*/Makefile.am: remove "fig ="
	* remove omf.make xmldocs.make
	* update autogen.sh
	* configure.in: -> 1.13
	* Release version 1.13

2005-07-24  Jörgen Scheibengruber <mfcn@gmx.de>

	* src/backend.c: (redraw_graph): Use black as background color,
	instead of fg[NORMAL]